# AutoTestIDE

./: .gitignore  CLAUDE.md  README.md  autotest-ide.spec  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/skills/: add-op-mode.md  add-sdk-protocol.md  autotest-ide-debug.md  pococlient-concurrency-debug.md  pyinstaller-package-debug.md  signal-chain-debug.md
docs/jx4/: AltrunUnityDriver接口协议文档.md  feature-gaps.md  runner.py  sdk-missing-interfaces.md
docs/plans/: 2026-06-29-autotest-ide-plan1-protocol-client.md  2026-06-29-autotest-ide-plan2-device-layer.md  2026-06-29-autotest-ide-plan3-ui-layer.md  2026-06-29-autotest-ide-plan4-runner-report.md  调试Skill模板：ai-debug-skill.md
docs/specs/: 2026-06-29-autotest-ide-clone-design.md  2026-06-29-autotest-ide-plan2-device-layer-design.md  2026-06-29-autotest-ide-plan3-ui-layer-design.md  2026-06-29-autotest-ide-plan4-runner-report-design.md
pages/jx4/: denglu.py  helpers.py  xinshouguan.py
src/autotest_ide/: __main__.py  app.py
tests/: conftest.py  fake_adb.py  fake_poco_server.py  test_code_gen.py  test_code_gen_service.py  test_connection_controller.py  test_device.py  test_device_manager.py  test_device_panel.py  test_errors.py  test_forwarder.py  test_helpers.py  test_integration_pick_point.py  test_jx4_protocol.py  test_locator.py  test_poco_client.py  test_protocol.py  test_protocol_adapter.py  test_real_device.py  test_record_controller.py  test_recorder.py  test_report_model.py  test_reporter.py  test_runner_integration.py  test_runtime.py  test_threads.py
(+45 files in other folders)
