[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autotest-ide"
version = "0.1.0"
description = "UI automation IDE for games and apps (Poco protocol, no image recognition)"
requires-python = ">=3.8"
dependencies = ["PyQt5>=5.15"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "real_device: real Android device smoke test (requires --run-real-device)",
]
